--- a/sunnyvale_data.ipynb
+++ b/sunnyvale_data.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import tabula"
+    "import pandas as pd"
    ]
   },
   {
